<resources>
    <string name="app_name">InClassDemo</string>
    <string name="hello_world">Hello World!</string>
    <string name="say_bye">Bye!</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_name">Enter name</string>
    <string name="Welcome">Welcome: %s</string>
    <string name="Logout">Logout</string>
    <string name="message_on_login">Message on Login</string>
    <string name="login">Login</string>
    <string name="go_to_second_activity">Go to Second Activity</string>
    <string name="an_image_of_a_star">An Image of a Star</string>
    <string name="go_to_weight_layout_example">Go to Weight Layout Example</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="middle">Middle</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="type_a_name_here">Type a name here</string>
    <string name="nested_linear_layout_go_to">Go to nested example</string>
    <string name="enter_some_text">Enter some text</string>
    <string name="relative_nexted_example_go_to">Go to Relative Nested Example</string>
    <string name="center">Center</string>
    <string name="north">North</string>
    <string name="south">South</string>
    <string name="west">West</string>
    <string name="east">East</string>
    <string name="a_picture_of_kyle_sitting_in_a_restaurant">A picture of Kyle sitting in a restaurant</string>
    <string name="go_to_frame_layout_example">Go to Frame Layout Example</string>
    <string name="one">1</string>
    <string name="big_mac">Big Mac</string>
    <string name="big_mac_price">$4.99</string>
    <string name="two">2</string>
    <string name="chicken_nuggets">Chicken Nuggets</string>
    <string name="chicken_nuggets_price">$5.99</string>
    <string name="mcdonalds">McDonalds</string>
    <string name="go_to_table_layout_example">Go to Table Layout Example</string>
    <string name="a_big_tasty_burger">A big tasty burger</string>
    <string name="tasty_chicken_in_nugget_form">Tasty chicken in nugget form that is battered and fried to perfection</string>
    <string name="go_to_relative_alignment_example">Go to Relative Alignment Example</string>
    <string name="hello_world_exclam">Hello World!</string>
    <string name="go_to_fragment_example">Go to Fragment Example</string>
    <string name="add_a">Add A</string>
    <string name="remove_a">Rem A</string>
    <string name="add_b">Add B</string>
    <string name="remove_b">Rem B</string>
    <string name="fragment_a">Fragment A</string>
    <string name="replace_by_a">Replace by \'A\'</string>
    <string name="replace_by_b">Replace by \'B\'</string>
    <string name="attach_b">Attach B</string>
    <string name="detach_b">Detach B</string>
    <string name="show_a">Show A</string>
    <string name="hide_a">Hide A</string>
    <string name="send_data_to_fragment">Send Data to Fragment</string>
    <string name="fragment_for_data">Fragment For Data</string>
    <string name="add_two_numbers">Add two numbers</string>
    <string name="result">RESULT</string>
    <string name="result_prompt">Result: %d</string>
    <string name="go_to_fragment_transaction_example">Go to Fragment Transaction Example</string>
    <string name="go_to_fragment_data_passing_example">Go to Fragment Data Passing Example</string>
    <string name="enter_your_first_number">Enter your first number</string>
    <string name="enter_your_second_number">Enter your second number</string>
    <string name="send_data_to_parent_activity">Send Data to Parent Activity</string>
    <string name="go_to_fragment_to_activity_data_passing_example">Go to Fragment to Activity Data Passing Example</string>
    <string name="fragment_b">Fragment B</string>
    <string name="send_data_to_fragment_result">Send Data to Fragment Result</string>
    <string name="numbers_recieved_in_activity">Numbers received in Activity: %d, %d</string>
    <string name="go_to_inter_fragment_communication_example">Go to Inter-Fragment Communication Example</string>
    <string name="back">BACK</string>
    <string name="pop_add_a_inclusive">Pop Add A Inclusive</string>
    <string name="pop_add_b">Pop Add B</string>
    <string name="new_button">New Button</string>
    <string name="this_is_for_a_screen_rotation_example">This is for a screen rotation example</string>
    <string name="radio_button_for_rotation_fragment_example">Radio Button for Rotation Fragment Example</string>
    <string name="checkbox_for_rotation_fragment_example">Checkbox for Rotation Fragment Example</string>
    <string name="score_value">Score value: %d</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="go_to_fragment_rotation_example">Go to Fragment Rotation Example</string>
    <string name="go_to_simple_volley_example">Go to Simple Volley Example</string>
    <string name="a_picture_of_a_kitten">A Picture of a Kitten</string>
    <string name="go_to_more_complex_volley_example">Go to More Complex Volley Example</string>
    <string name="sign_in">Sign In</string>
    <string name="go_to_simple_firebase_db_example">Go to Simple Firebase DB Example</string>
    <string name="add_todo_item">Add Todo Item</string>
    <string name="go_to_complex_firebase_example">Go to Complex Firebase Example</string>
    <string name="go_to_room_persistence_example">Go to Room Persistence Example</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="go_to_location_example">Go To Location Example</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="network_provider_started_running">Network provider started running</string>
    <string name="network_provider_update">Network Provider update</string>
    <string name="hello_class">Hello Class!</string>
    <string name="go_to_click_example">Go To Click Example</string>
    <string name="example_user_name">Example Person</string>
    <string name="example_user_email">exampleperson@example</string>
    <string name="example_user_first_name">Example</string>
    <string name="example_user_last_name">Person</string>
    <string name="example_user_photo">http://placekitten.com/200/300</string>
    <string name="second_activity">Second Activity</string>
    <string name="some_text">Some text</string>
    <string name="jk_text_view">JK I want the text to be this</string>
    <string name="jk_button_text">JK I want the Button to have this text</string>
    <string name="button3">Button3</string>
    <string name="go_to_gravity_example">Go to Gravity Example</string>
    <string name="go_to_constraint_layout_example">Go to Constraint Layout Example</string>
    <string name="sign_out">Sign Out</string>
    <string name="a_picture_of_the_users_photo">A picture of the users photo</string>
</resources>
