<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/ten">

    <TextView
        android:id="@+id/rotationFragTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_a" />

    <Button
        android:id="@+id/rotationFragBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <EditText
        android:id="@+id/rotationFragEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/this_is_for_a_screen_rotation_example"
        android:inputType="text"/>

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_for_rotation_fragment_example" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_for_rotation_fragment_example" />

</LinearLayout>