<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <Button
        android:layout_width="@dimen/onethirty"
        android:layout_height="@dimen/onethirty"
        android:text="@string/button1"
        android:gravity="top"
        android:id="@+id/buttonOneGravity"/>

    <Button
        android:layout_width="@dimen/onethirty"
        android:layout_height="@dimen/onethirty"
        android:text="@string/button2"
        android:gravity="bottom" />

    <Button
        android:layout_width="@dimen/onethirty"
        android:layout_height="@dimen/onethirty"
        android:text="@string/button3"
        android:layout_gravity="end"
        android:gravity="top" />

</LinearLayout>